--- a/plugin.xml
+++ b/plugin.xml
@@ -3,16 +3,16 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-plugin-nativeaudio"
-        version="3.1.1">
+        version="3.1.2">
 
     <name>Cordova Native Audio</name>
     <author>Andrew Trice, Raymond Xie, Sidney Bofah and other contributors</author>
-    <description>Cordova/PhoneGap Plugin for low latency Native Audio Playback, must have for HTML5 games</description>
+    <description>Capacitor Plugin for low latency Native Audio Playback based off of the cordova plugin</description>
 
     <license>MIT</license>
     <keywords>audio,fx,music,mp3,game,rjfun</keywords>
-    <repo>https://github.com/wizpanda/cordova-plugin-nativeaudio.git</repo>
-    <issue>https://github.com/wizpanda/cordova-plugin-nativeaudio/issues</issue>
+    <repo>https://github.com/trackleaf/cordova-plugin-nativeaudio.git</repo>
+    <issue>https://github.com/trackleaf/cordova-plugin-nativeaudio/issues</issue>
 
     <engines>
         <engine name="cordova" version=">=3.5"/>
